@@ -7,6 +7,9 @@ new features:
 - add a numerical raytracer depending on the radiopropa code
 - major change in the declaration of mediums at the back end, at the front end nothing changed.
 
+bugfixes:
+- correct volume extension depending on zenith angle range when running with
+secondaries
 
 version 2.0.1
 new features
